--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -11,10 +11,10 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
-        #        show_sql: true
+        show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
 
