--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,7 +11,7 @@ RUN yarn install
 RUN yarn build
 
 FROM nginx:alpine
-COPY --from=build /app/dist /var/www/client
+COPY --from=build /app/dist /opt/app
 COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
