--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     # command: sh -c "npm install --legacy-peer-deps && npm run build"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./client/build:/var/www/client
+      - ./client/build:/opt/app
     depends_on:
       - server
   
@@ -40,6 +40,7 @@ services:
 
   nginx-rtmp:
     image: tiangolo/nginx-rtmp
+    restart: always
     container_name: nginx-rtmp
     ports:
       - "1935:1935"  # RTMP
@@ -51,6 +52,7 @@ services:
 
   db:
     image: mysql:8.0.30
+    restart: always
     container_name: db
     command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci --default-authentication-plugin=mysql_native_password
     ports:
@@ -70,6 +72,7 @@ services:
 
   redis:
     image: redis:alpine
+    restart: always
     ports:
       - "6379:6379"
     command: redis-server --appendonly yes
