FEAT : Redis를 이용한 채팅 구현 Redis로 구현완료했는데 기존의 JPA와 Mysql를 저장소로 한 코드가 완전히 필요없어졌다.
서비스의 실시간성과 채팅 그 자체의 가치를 생각했을때 지금의 구조가 맞다 생각하지만 혹시 몰라 JPA + Mysql코드도 남겨놓았다.

--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -23,6 +23,11 @@ spring:
     init:
       mode: always
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
 paging:
     default-page-size: 10
     default-page-number: 0
