--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,6 +17,11 @@ configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
+	all {
+		exclude group: 'commons-logging', module: 'commons-logging' // 전역 exclude 설정
+		exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+		exclude group: 'org.slf4j', module: 'slf4j-simple'
+	}
 }
 
 repositories {
@@ -24,6 +29,11 @@ repositories {
 }
 
 dependencies {
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//	testImplementation 'it.ozimov:embedded-redis:0.7.2'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+	// sql query parameter log
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 	// thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -38,7 +48,7 @@ dependencies {
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 	// implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation ('org.springframework.boot:spring-boot-starter-web')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
