--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
     "prettier": "^3.4.2",
+    "sass": "^1.83.4",
     "storybook": "8.4.7",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.1",
