S12P11B102-181 Add: Jenkins 연결 client 컨테이너는 실행 문제로 잠시 빌드 보류 상태 server, hls, rtmp, redis는 동작합니다.

--- a/client/nginx/default.conf
+++ b/client/nginx/default.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location / {
-        root /var/www/client;
+        root /opt/app;
         try_files $uri $uri/ /index.html;
     }
 
