--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.63.0",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "eslint-config-airbnb": "^19.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
