add: vote기능에 swagger 문서작업추가
- VoteFindController, VoteCommandController @Tag, @Operation 추가
- SessionFinalResultFindDto, SessionFindDto, SessionResultFindDto,
  VoteCastRequest @Schema 추가

--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -11,7 +11,8 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
+    #      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
@@ -19,9 +20,9 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
 
-  sql:
-    init:
-      mode: always
+  #  sql:
+  #    init:
+  #      mode: always
 
   data:
     redis:
@@ -29,12 +30,19 @@ spring:
       port: 6379
 
 paging:
-    default-page-size: 10
-    default-page-number: 0
+  default-page-size: 10
+  default-page-number: 0
 
 logging.level:
   org.hibernate.SQL: DEBUG
   org.springframework:
     web.socket: DEBUG
     messaging: DEBUG
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/index.html
+  api-docs:
+    path: /v3/api-docs
+
 
