--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -14,10 +14,27 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        #        show_sql: true
+#        show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+    defer-datasource-initialization: true
+
+  sql:
+    init:
+      mode: always
+
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+paging:
+    default-page-size: 10
+    default-page-number: 0
 
 logging.level:
   org.hibernate.SQL: DEBUG
+  org.springframework:
+    web.socket: DEBUG
+    messaging: DEBUG
 
