--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
     "storybook": "8.4.7",
+    "storybook-addon-react-router-v6": "^2.0.15",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.19.1",
     "vite": "^6.0.5",
