--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -11,8 +11,8 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
-    #      ddl-auto: create
+#      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show_sql: true
@@ -20,9 +20,9 @@ spring:
         dialect: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
 
-  #  sql:
-  #    init:
-  #      mode: always
+  sql:
+    init:
+      mode: always
 
   data:
     redis:
