--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
     depends_on:
       db:
         condition: service_healthy
+      redis:
+        condition: service_healthy
 
   nginx-rtmp:
     image: tiangolo/nginx-rtmp
@@ -40,6 +42,7 @@ services:
     ports:
       - "1935:1935"  # RTMP
       - "8050:8050"  # HLS
+      - "1936:80" # RTMP console
     volumes:
       - ./nginx/rtmp.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
@@ -68,6 +71,7 @@ services:
   redis:
     image: redis:alpine
     restart: always
+    container_name: redis
     ports:
       - "6379:6379"
     command: redis-server --appendonly yes
