S12P11B102-246 feat: Nginx 파일, 이미지 media 핸들링

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,12 +16,15 @@ server {
     location / {
         root /opt/app;
         try_files $uri $uri/ /index.html;
-    }    
+    }
 
     location /media/ {
-        proxy_pass http://api$request_uri;
-        proxy_set_header Host $http_host;
+        root /app/;
+        autoindex on;
+        expires max;
+        access_log off;
     }
+
 
     location /api/ {
         proxy_pass http://api$request_uri;
