feat: media mount 경로 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "80:80"
     volumes:
       - ./client:/client
-      - ./data:uploads:/app/uploads
+      - ./data/uploads:/app/uploads
 
   server:
     image: openjdk:17-alpine
