--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -18,6 +18,8 @@ spring:
 #        show_sql: true
         format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+        id:
+          new_generator_mappings: true
     defer-datasource-initialization: true
 
 #  sql:
