feat : VoteTeam 후보자 변경 POST 메서드 구현

--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -22,9 +22,9 @@ spring:
           new_generator_mappings: true
     defer-datasource-initialization: true
 
-#  sql:
-#    init:
-#      mode: always
+  sql:
+    init:
+      mode: always
 
   data:
     redis:
