--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,53 +1,75 @@
-upstream api {
-    server server:8080;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
+
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 80;
-    server_name localhost;
+http {
+    limit_req_zone $binary_remote_addr zone=ddos_req:10m rate=20r/s;
+    limit_req_status 503;
+    limit_conn_zone $binary_remote_addr zone=ddos_conn:10m;
 
-    # ignore cache frontend
-    location ~* (service-worker\.js)$ {
-        add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
-        expires off;
-        proxy_no_cache 1;
+    upstream api {
+        server server:8080;
     }
 
-    location / {
-        root /opt/app;
-        try_files $uri $uri/ /index.html;
+    server {
+        listen 80;
+        server_name localhost;
+
+        # ignore cache frontend
+        location ~* (service-worker\.js)$ {
+            add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            expires off;
+            proxy_no_cache 1;
+        }
+
+        location / {
+            root /opt/app;
+            try_files $uri $uri/ /index.html;
+        }    
+
+        location /media/ {
+            root /app/;
+            autoindex on;
+            expires max;
+            access_log off;
+        }
+
+        location /api/ {
+            proxy_pass http://api$request_uri;
+
+            proxy_read_timeout 300s;
+            proxy_connect_timeout 75s;
+
+            proxy_http_version  1.1;
+            proxy_cache_bypass  $http_upgrade;
+
+            proxy_set_header Upgrade           $http_upgrade;
+            proxy_set_header Connection        "upgrade";
+            proxy_set_header Host              $host;
+            proxy_set_header X-Real-IP         $remote_addr;
+            proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host  $host;
+            proxy_set_header X-Forwarded-Port  $server_port;
+        }
+        
+        
+        location /stream {
+            proxy_pass http://api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_buffering off;
+            proxy_read_timeout 3600s;
+        }
+
+
+        # ªÁøÎ¿⁄ ¿ÃπÃ¡ˆ æ˜∑ŒµÂ
+        client_max_body_size 10M;
     }
-
-    location /media/ {
-        root /app/;
-        autoindex on;
-        expires max;
-        access_log off;
-    }
-
-
-    location /api/ {
-        proxy_pass http://api$request_uri;
-
-        proxy_read_timeout 300s;
-        proxy_connect_timeout 75s;
-
-        proxy_http_version  1.1;
-        proxy_cache_bypass  $http_upgrade;
-
-        proxy_set_header Upgrade           $http_upgrade;
-        proxy_set_header Connection        "upgrade";
-        proxy_set_header Host              $host;
-        proxy_set_header X-Real-IP         $remote_addr;
-        proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host  $host;
-        proxy_set_header X-Forwarded-Port  $server_port;
-    }
-
-    # ÏÇ¨Ïö©Ïûê Ïù¥ÎØ∏ÏßÄ ÏóÖÎ°úÎìú
-    client_max_body_size 10M;
-
-    access_log /var/log/nginx/80_access.log;
-    error_log /var/log/nginx/80_error.log;
 }
