--- a/nginx/rtmp.conf
+++ b/nginx/rtmp.conf
@@ -16,7 +16,8 @@ rtmp {
             hls on;
             hls_path /opt/data/hls;
             hls_fragment 2s;
-            hls_playlist_length 30s;
+            hls_playlist_length 6s;
+            hls_cleanup on;
         }
     }
 }
@@ -35,8 +36,8 @@ http {
             autoindex on;
             add_header Cache-Control no-cache;
         }
-
-        location /hls {
+	
+    	  location /hls {
             alias /opt/data/hls;
             autoindex on;
             allow all;
@@ -48,6 +49,9 @@ http {
             
             add_header Cache-Control no-cache;
             add_header Access-Control-Allow-Origin *;
-        }
+            add_header Access-Control-Allow-Methods 'GET, OPTIONS';
+            add_header Access-Control-Allow-Headers 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+            add_header Access-Control-Expose-Headers 'Content-Length,Content-Range';
+    	  }
     }
 }
