--- a/client/package.json
+++ b/client/package.json
@@ -51,6 +51,7 @@
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-storybook": "^0.11.2",
     "globals": "^15.14.0",
+    "msw": "^2.7.0",
     "prettier": "^3.4.2",
     "sass": "^1.83.4",
     "storybook": "8.4.7",
@@ -64,6 +65,11 @@
   "eslintConfig": {
     "extends": [
       "plugin:storybook/recommended"
+    ]
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
     ]
   }
 }
