--- a/nginx/rtmp.conf
+++ b/nginx/rtmp.conf
@@ -1,4 +1,5 @@
 worker_processes auto;
+worker_rlimit_nofile 100000;
 rtmp_auto_push on;
 
 events {
@@ -8,16 +9,17 @@ events {
 rtmp {
     server {
         listen 1935;
-        # listen [::]:1935 ipv6only=on;
+        chunk_size 4096;
 
         application live {
             live on;
             record off;
             hls on;
             hls_path /opt/data/hls;
-            hls_fragment 2s;
-            hls_playlist_length 6s;
+            hls_fragment 1s;
+            hls_playlist_length 3s;
             hls_cleanup on;
+            hls_continuous on;
         }
     }
 }
@@ -26,20 +28,22 @@ http {
     include       mime.types;
     default_type  application/octet-stream;
     sendfile        on;
+    tcp_nopush on;
+    tcp_nodelay on;
     keepalive_timeout  65;
 
     server {
         listen 8050;
         
-        location / { # Debug
+        location / {
             root /opt/data;
-            autoindex on;
+            autoindex off;
             add_header Cache-Control no-cache;
         }
 	
     	  location /hls {
             alias /opt/data/hls;
-            autoindex on;
+            autoindex off;
             allow all;
             
             types {
