fix: Nginx mime.types 서빙 수정

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,6 +7,8 @@ events {
 }
 
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
     limit_req_zone $binary_remote_addr zone=ddos_req:10m rate=20r/s;
     limit_req_status 503;
     limit_conn_zone $binary_remote_addr zone=ddos_conn:10m;
