--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,6 @@
 FROM node:20.18.1-alpine AS build
 WORKDIR /app
 
-# RUN nvm install 20.18.1
-# RUN nvm use 20.18.1
-# RUN npm install -g yarn
-
 # 소스 복사 및 빌드
 COPY . .
 RUN yarn install
@@ -12,6 +8,6 @@ RUN yarn build
 
 FROM nginx:alpine
 COPY --from=build /app/dist /opt/app
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+# COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
