--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,8 @@ services:
       - "1935:1935"  # RTMP
       - "8050:8050"  # HLS
       - "1936:80" # RTMP console
+    environment:
+      TZ: "Asia/Seoul"
     volumes:
       - ./nginx/rtmp.conf:/etc/nginx/nginx.conf:ro
       - ./hls:/opt/data/hls
@@ -77,6 +79,8 @@ services:
     container_name: redis
     ports:
       - "6379:6379"
+    environment:
+      TZ: "Asia/Seoul"
     command: redis-server --appendonly yes
     volumes:
       - ./redis:/redis
@@ -93,9 +97,9 @@ services:
     ports:
       - "9000:8080"
       - "50000:50000"
+    environment:
+      - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
       - ./jenkins:/var/jenkins_home
       - ./jenkins/home:/var/jenkins_home/data
-    environment:
-      - DOCKER_HOST=unix:///var/run/docker.sock
     user: root
