--- a/server/build.gradle
+++ b/server/build.gradle
@@ -48,7 +48,9 @@ dependencies {
 	// Jakarta Annotations (필수)
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
-	// implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security' // 스프링 시큐리티
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // 스프링 oauth2
+	implementation 'io.jsonwebtoken:jjwt:0.9.1' // jwt
 	implementation ('org.springframework.boot:spring-boot-starter-web')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
@@ -58,7 +60,7 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// Test코드에서 사용할 의존성
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
