--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -2,7 +2,11 @@ spring:
   config:
     activate:
       on-profile: dev
-
+  servlet:
+    multipart:
+      enabled: true
+      max-file-size: 10MB
+      max-request-size: 10MB
   datasource:
     url: jdbc:h2:tcp://localhost/~/server
     username: sa
@@ -12,7 +16,7 @@ spring:
   jpa:
     hibernate:
 #      ddl-auto: update
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
 #        show_sql: true
@@ -22,9 +26,9 @@ spring:
           new_generator_mappings: true
     defer-datasource-initialization: true
 
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 
   data:
     redis:
