--- a/nginx/default-http.conf
+++ b/nginx/default-http.conf
@@ -22,22 +22,10 @@ http {
     upstream api {
         server server:8080;
     }
-    
+
     server {
         listen 80;
         server_name i12b102.p.ssafy.io;
-        return 301 https://$host$request_uri;
-    }
-
-    server {
-        listen 443 ssl;
-        server_name i12b102.p.ssafy.io;
-        
-        ssl_certificate     /etc/letsencrypt/live/i12b102.p.ssafy.io/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/i12b102.p.ssafy.io/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
 
         # ignore cache frontend
         location ~* (service-worker\.js)$ {
@@ -77,7 +65,8 @@ http {
             proxy_set_header X-Forwarded-Port  $server_port;
         }
         
-        location /ws/ {
+        
+        location /stream {
             proxy_pass http://api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -86,33 +75,7 @@ http {
             proxy_buffering off;
             proxy_read_timeout 3600s;
         }
-        
-        location /stream/ {
-            proxy_pass http://api$request_uri;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
-            proxy_buffering off;
-            proxy_read_timeout 3600s;
-        }
-        
-        location /hls/ {
-            proxy_hide_header Access-Control-Allow-Origin;
-            
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Range';
-            add_header 'Access-Control-Expose-Headers' 'Content-Length, Content-Range';
-    
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
-            
-            proxy_pass http://nginx-rtmp:8050/hls/;
-            proxy_set_header Host $host;
-            proxy_buffering off;
-        }
+
 
         client_max_body_size 10M;
     }
