fix: 프->백 요청 문제 해결

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - "443:443"
     volumes:
       - ./client:/client
+      - ./client/.env:/app/.env
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./nginx/default.conf:/etc/nginx/nginx.conf:ro
       - ./media/uploads:/app/uploads
