--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -16,7 +16,7 @@ spring:
   jpa:
     hibernate:
       #      ddl-auto: update
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         #        show_sql: true
@@ -26,9 +26,9 @@ spring:
           new_generator_mappings: true
     defer-datasource-initialization: true
 
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 #      mode: never
 
   data:
@@ -79,4 +79,4 @@ springdoc:
   api-docs:
     path: /v3/api-docs
 
-base_url: http://localhost:8080
+base_url: https://i12b102.p.ssafy.io
