--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -79,4 +79,6 @@ springdoc:
   api-docs:
     path: /v3/api-docs
 
-base_url: https://i12b102.p.ssafy.io
+#base_url: https://i12b102.p.ssafy.io
+base_url: http://localhost:5173
+
