fix: file 저장 로직 수정

--- a/server/src/main/resources/application-dev.yml
+++ b/server/src/main/resources/application-dev.yml
@@ -79,6 +79,5 @@ springdoc:
   api-docs:
     path: /v3/api-docs
 
-#base_url: https://i12b102.p.ssafy.io
-base_url: http://localhost:5173
+base_url: https://i12b102.p.ssafy.io
 
