--- a/server/build.gradle
+++ b/server/build.gradle
@@ -28,6 +28,8 @@ repositories {
 }
 
 dependencies {
+	// spring session
+	implementation 'org.springframework.session:spring-session-core'
 	// mybatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 //	runtimeOnly 'mysql:mysql-connector-java'  // MySQL 사용 시
