--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -51,11 +51,12 @@ http {
             try_files $uri $uri/ /index.html;
         }    
 
-        location /media/ {
-            root /app/;
+        location /uploads/ {
+            alias /app/uploads/;
             autoindex on;
             expires max;
             access_log off;
+            # try_files $uri $uri/ =404;
         }
 
         location /api/ {
@@ -77,7 +78,7 @@ http {
             proxy_set_header X-Forwarded-Port  $server_port;
         }
         
-        location /ws/ {
+        location /ws {
             proxy_pass http://api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -87,7 +88,7 @@ http {
             proxy_read_timeout 3600s;
         }
         
-        location /stream/ {
+        location /stream {
             proxy_pass http://api$request_uri;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
