--- a/nginx/srs.conf
+++ b/nginx/srs.conf
@@ -1,10 +1,18 @@
+# SRS 기본 설정
 listen              1935;
 max_connections     1000;
 daemon              off;
 srs_log_tank        console;
 
+rtc {
+    enabled               on;
+    listen                8000;
+    ssl_certificate       /etc/letsencrypt/live/i12b102.p.ssafy.io/fullchain.pem;
+    ssl_certificate_key   /etc/letsencrypt/live/i12b102.p.ssafy.io/privkey.pem;
+    stun_server           stun:stun.l.google.com:19302;
+}
+
 vhost __defaultVhost__ {
-    # HLS/LL-HLS 설정
     hls {
         enabled         on;
         hls_path        /usr/local/srs/objs/nginx/html;
@@ -13,11 +21,6 @@ vhost __defaultVhost__ {
         hls_on_error    continue;
         hls_ll          on;
         hls_wait_keyframe off;
-    }
-
-    http_api {
-        enabled         on;
-        listen          1985;
     }
 
     http_server {
