--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,7 +13,7 @@ http {
     limit_req_status 503;
     limit_conn_zone $binary_remote_addr zone=ddos_conn:10m;
     
-    add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self'; object-src 'none';";
+    add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; script-src 'self'; style-src 'self'; object-src 'none'; media-src 'self' blob:;";
     add_header X-Content-Type-Options "nosniff";
     add_header X-Frame-Options "DENY";
     add_header Referrer-Policy "no-referrer";
@@ -76,6 +76,26 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host  $host;
             proxy_set_header X-Forwarded-Port  $server_port;
+        }
+        
+        location /oauth2 {
+            proxy_pass http://api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_buffering off;
+            proxy_read_timeout 3600s;
+        }
+        
+        location /login/oauth2 {
+            proxy_pass http://api$request_uri;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_buffering off;
+            proxy_read_timeout 3600s;
         }
         
         location /ws {
