--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,6 +18,8 @@ http {
     add_header X-Frame-Options "DENY";
     add_header Referrer-Policy "no-referrer";
     add_header X-XSS-Protection "1; mode=block" always;
+    
+    client_max_body_size 1000m;
 
     upstream api {
         server server:8080;
@@ -27,6 +29,7 @@ http {
         listen 80;
         server_name i12b102.p.ssafy.io;
         return 301 https://$host$request_uri;
+        client_max_body_size 1000m;
     }
 
     server {
@@ -38,17 +41,21 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
+        
+        client_max_body_size 1000m;
 
         # ignore cache frontend
         location ~* (service-worker\.js)$ {
             add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
             expires off;
             proxy_no_cache 1;
+            client_max_body_size 1000m;
         }
 
         location / {
             root /opt/app;
             try_files $uri $uri/ /index.html;
+            client_max_body_size 1000m;
         }    
 
         location /uploads/ {
@@ -57,10 +64,12 @@ http {
             expires max;
             access_log off;
             # try_files $uri $uri/ =404;
+            client_max_body_size 1000m;
         }
 
         location /api/ {
             proxy_pass http://api$request_uri;
+            client_max_body_size 1000m;
 
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
@@ -80,6 +89,7 @@ http {
         
         location /oauth2 {
             proxy_pass http://api$request_uri;
+            client_max_body_size 1000m;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -90,6 +100,7 @@ http {
         
         location /login/oauth2 {
             proxy_pass http://api$request_uri;
+            client_max_body_size 1000m;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -100,6 +111,7 @@ http {
         
         location /ws {
             proxy_pass http://api$request_uri;
+            client_max_body_size 1000m;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -110,6 +122,7 @@ http {
         
         location /stream {
             proxy_pass http://api$request_uri;
+            client_max_body_size 1000m;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -125,6 +138,8 @@ http {
             add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
             add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Range';
             add_header 'Access-Control-Expose-Headers' 'Content-Length, Content-Range';
+            
+            client_max_body_size 1000m;
     
             if ($request_method = 'OPTIONS') {
                 return 204;
@@ -134,7 +149,5 @@ http {
             proxy_set_header Host $host;
             proxy_buffering off;
         }
-
-        client_max_body_size 10M;
     }
 }
