chore: EC2 비활성화에 따른 URL 제거 및 관련 소스코드 수정

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 # 소스 복사 및 빌드
 COPY . .
 
-RUN printf "VITE_PUBLIC_API_URL=https://i12b102.p.ssafy.io/api\nVITE_PUBLIC_OAUTH_URL=https://i12b102.p.ssafy.io/oauth2\nVITE_PUBLIC_URL=https://i12b102.p.ssafy.io\nVITE_PUBLIC_SOCKET_URL=wss://i12b102.p.ssafy.io\n" > .env
+RUN printf "VITE_PUBLIC_URL=http://localhost\nVITE_PUBLIC_API_URL=http://localhost/api\nVITE_PUBLIC_OAUTH_URL=http://localhost/oauth2\nVITE_PUBLIC_URL=http://localhost\nVITE_PUBLIC_SOCKET_URL=ws://localhost\n" > .env
 
 RUN yarn install
 RUN yarn build
