--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,20 +27,7 @@ http {
     
     server {
         listen 80;
-        server_name i12b102.p.ssafy.io;
-        return 301 https://$host$request_uri;
-        client_max_body_size 1000m;
-    }
-
-    server {
-        listen 443 ssl;
-        server_name i12b102.p.ssafy.io;
-        
-        ssl_certificate     /etc/letsencrypt/live/i12b102.p.ssafy.io/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/i12b102.p.ssafy.io/privkey.pem;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
-        ssl_prefer_server_ciphers on;
+        server_name localhost;
         
         client_max_body_size 1000m;
 
